fixed bottom spacing

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -9,7 +9,7 @@ body {
   margin-top: 10vh;
 }
 .footer {
-  bottom: 9vh;
+  bottom: 10vh;
   position: absolute;
 }
 .footer-content {
